Fix Documentation Profile
